--- a/general/plans/投递管理追踪系统.md
+++ b/general/plans/投递管理追踪系统.md
@@ -1,1 +1,13 @@
-现在使用
+现在使用Google sheet进行投递状态追踪的管理，但是管理起来比较麻烦
+- /Users/junming/code/SophiaJobHelper/google-sheets-sync/agent_sophia_job_list.xlsx
+
+具体有几个痛点
+1. 缺乏投递优先级与ddl时间管理，经常由于时间问题，错过院校的投递时间。
+2. 与不同的子系统缺乏联动，例如faculty-application_script的抓取结果，要手动记录到google-sheets里，./job-filling后要手动更新google-sheets的状态，收到学校的email reject/进入推荐信/进入long list/short list环节也是需要手动更新维护。
+
+
+感觉需要与/Users/junming/code/SophiaJobHelper/faculty-application_script 协同设计，抓取入库，然后管理，然后可以点击一下支持跑overseas_pipeline的step1&2分析优先级，将结果导入进来看一下，在系统里可以选择是否继续后续的流程。
+
+问题：
+- 缺乏一个统一的投递状态追踪的数据抽象（从系统流程的角度，从业务的角度）
+- 要总结下目前已有的Google sheet的投递状态有哪些，划分下类别，然后思考下新的系统里要支持哪些状态
