--- a/overleaf-projects/Faculty Position/Teaching Statement/Teaching Statement/Teaching_Statement.tex
+++ b/overleaf-projects/Faculty Position/Teaching Statement/Teaching Statement/Teaching_Statement.tex
@@ -118,7 +118,9 @@ I have been fortunate to mentor 10 students in total: 3 undergraduate students, 
 
 For example, I informally mentored a Ph.D. student, \textbf{Ruyuan Wan}, then at the University of Notre Dame, whose research explores the intersection of HCI and NLP. She proposed that the methodological pipeline of qualitative analysis could inform and enhance approaches to subjective data annotation. Together, we conducted a literature review on a collection of academic papers. Our collaboration resulted in two workshop papers. The first was presented at the \textit{LLMs as Research Tools} workshop at CHI 2024. She later worked with my another student, \textbf{Haonan Wang}, a CS master student at JHU, which led to another position paper at the HCI plus NLP workshop at EMNLP 2025. In that paper, Ruyuan was the first author and I served as the last author.
 
-In addition to Ph.D. students, during my postdoc at SMART, I also mentored a first-year undergraduate student, \textbf{Erika Lee} from the University of San Diego, who joined my project on human--LLM collaboration as a summer research intern. This mentoring experience was especially rewarding. Erika shared that participating in my research helped her succeed in a scholarship interview with the U.S. Department of Defense, which included a job offer to work there as a research scientist after graduation. As she once told me, ``\textit{I really look up to you as a researcher, and I'm grateful to have the chance to learn from you!}'' Her message reminded me how meaningful mentorship can be in shaping a student's confidence and career aspirations. Overall, these experiences have strengthened my belief in the value of early research exposure and the importance of providing inspiration and guidance to young scholars.
+In addition to Ph.D. students, during my postdoc at SMART, I also mentored a first-year undergraduate student, \textbf{Erika Lee} from the University of San Diego, who joined my project on human--LLM collaboration as a summer research intern. This mentoring experience was especially rewarding. Erika shared that participating in my research helped her succeed in a scholarship interview with the U.S. Department of Defense, which included a job offer to work there as a research scientist after graduation. As she once told me, ``\textit{I really look up to you as a researcher, and I'm grateful to have the chance to learn from you!}'' Her message reminded me how meaningful mentorship can be in shaping a student's confidence and career aspirations.
+
+A different challenge came with \textbf{Zhiyao Shu}, a master's student from UC Berkeley who joined my project on AI-assisted qualitative data analysis having studied architecture, not computer science. She had strong design instincts but limited programming experience. Rather than treating that as a deficit, I worked with her to build skills step by step---breaking tasks into concrete pieces, using her architectural background as an asset in user-facing design decisions, and making sure her early contributions were visible enough to sustain her confidence. She ended up leading development of the analysis tool, and the quality of her implementation drew genuine praise from colleagues. She is now a PhD student at George Mason University. This experience reinforced for me that students from non-traditional backgrounds often bring exactly the perspective a CS research project is missing---the mentor's job is to build the bridge, not guard the gate.
 
 % ============================================
 % PROPOSED COURSES
